fix: prevent header menu text wrapping

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ h1 {
   margin-top: 4px;
   padding: 4px;
   z-index: 10;
+  width: max-content;
 }
 
 .app-menu .menu-list [role='menuitem'] {
@@ -189,6 +190,7 @@ h1 {
   text-align: left;
   color: inherit;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .app-menu .menu-list [role='menuitem']:hover {
